Still another attempt to do full gazetteer build with Travis